--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
     <h1>NEW BRANCH</h1>
     
     <p>Testing. Changes again with branch app01</p>
+    
+    <button>New Button</button>
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
