Added new features

--- a/index.html
+++ b/index.html
@@ -24,6 +24,12 @@
     
     <button>New Button</button>
 
+    <table>
+      <tr>
+        <td>Added this table on new feature branch</td>
+      </tr>
+    </table>
+
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
