Added another row to the table

--- a/index.html
+++ b/index.html
@@ -28,6 +28,9 @@
       <tr>
         <td>Added this table on new feature branch</td>
       </tr>
+      <tr>
+        <td>Added this table on new feature branch on another commit</td>
+      </tr>
     </table>
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
