--- a/about.html
+++ b/about.html
@@ -20,6 +20,8 @@
   <body>
     <h1>About Us</h1>
 
+    <p>Added a new paragraph</p>
+
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
